Update Open Graph and Twitter meta tags for improved SEO and branding

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://chefinhogamestore.com/">
-    <meta property="og:title" content="Chefinho Gaming Store - A Maior Loja Gamer do Brasil">
-    <meta property="og:description" content="Encontre os melhores equipamentos gaming com preços exclusivos. Periféricos, Hardware, Setup e muito mais!">
+    <meta property="og:title" content="Chefinho Gaming Store - A Maior Loja e-commerce de produtos digitais do Brasil">
+    <meta property="og:description" content="Encontre os melhores equipamentos /contas com preços exclusivos. Rucoy Online, Free Fire, Clash Royale e muito mais!">
     <meta property="og:image" content="https://chefinhogamestore.com/img/og-image.jpg">
     <meta property="og:site_name" content="Chefinho Gaming Store">
     <meta property="og:locale" content="pt_BR">
@@ -18,8 +18,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://chefinhogamestore.com/">
-    <meta property="twitter:title" content="Chefinho Gaming Store - A Maior Loja Gamer do Brasil">
-    <meta property="twitter:description" content="Encontre os melhores equipamentos gaming com preços exclusivos. Periféricos, Hardware, Setup e muito mais!">
+    <meta property="twitter:title" content="Chefinho Gaming Store - A Maior Loja e-commerce de produtos digitais do Brasil">
+    <meta property="twitter:description" content="Encontre os melhores equipamentos /contas com preços exclusivos. Rucoy Online, Free Fire, Clash Royale e muito mais!">
     <meta property="twitter:image" content="https://chefinhogamestore.com/img/og-image.jpg">
     
     <!-- Font Awesome -->
