fix: update product statistics to reflect accurate numbers

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                 <!-- Stats -->
                 <div class="stats">
                     <div class="stat-item fade-in-up">
-                        <span class="stat-number">10K+</span>
+                        <span class="stat-number">50+</span>
                         <span class="stat-label">Produtos</span>
                     </div>
                     <div class="stat-item fade-in-up">
-                        <span class="stat-number">50K+</span>
+                        <span class="stat-number">100+</span>
                         <span class="stat-label">Clientes</span>
                     </div>
                     <div class="stat-item fade-in-up">
