Add favicons and web manifest for Chefinho Gaming Store
- Added favicon images: favicon-16x16.png, favicon-32x32.png, and favicon.ico.
- Created site.webmanifest for Chefinho Gaming Store with app details and icon references.

--- a/rucoy.html
+++ b/rucoy.html
@@ -29,7 +29,14 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
+    
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons_chefinho/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons_chefinho/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons_chefinho/favicon-16x16.png">
+    <link rel="manifest" href="favicons_chefinho/site.webmanifest">
+    <link rel="shortcut icon" href="favicons_chefinho/favicon.ico">
+    <meta name="theme-color" content="#8B5CF6">
 </head>
 <body>
     <!-- Header -->
