--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://chefinhogamestore.com/">
+    <meta property="og:url" content="https://chefinhogamestore.netlify.app/">
     <meta property="og:title" content="Chefinho Gaming Store - A Maior Loja e-commerce de produtos digitais do Brasil">
     <meta property="og:description" content="Encontre os melhores equipamentos /contas com preços exclusivos. Rucoy Online, Free Fire, Clash Royale e muito mais!">
-    <meta property="og:image" content="https://chefinhogamestore.com/img/og-image.jpg">
+    <meta property="og:image" content="https://chefinhogamestore.netlify.app/img/og-image.svg">
     <meta property="og:site_name" content="Chefinho Gaming Store">
     <meta property="og:locale" content="pt_BR">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://chefinhogamestore.com/">
+    <meta property="twitter:url" content="https://chefinhogamestore.netlify.app/">
     <meta property="twitter:title" content="Chefinho Gaming Store - A Maior Loja e-commerce de produtos digitais do Brasil">
     <meta property="twitter:description" content="Encontre os melhores equipamentos /contas com preços exclusivos. Rucoy Online, Free Fire, Clash Royale e muito mais!">
-    <meta property="twitter:image" content="https://chefinhogamestore.com/img/og-image.jpg">
+    <meta property="twitter:image" content="https://chefinhogamestore.netlify.app/img/og-image.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     
