Add new favicons and update web manifest and robots.txt
- Added favicon images: favicon-16x16.png, favicon-32x32.png, and favicon.ico.
- Created site.webmanifest for application metadata including icons and theme colors.
- Updated robots.txt to allow crawlers from social media platforms and included a comment for sitemap.

--- a/produto.html
+++ b/produto.html
@@ -35,14 +35,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> 
     
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons_chefinho/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons_chefinho/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons_chefinho/favicon-16x16.png">
-    <link rel="manifest" href="favicons_chefinho/site.webmanifest">
-    <link rel="shortcut icon" href="favicons_chefinho/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/site.webmanifest">
+    <link rel="shortcut icon" href="/favicons/favicon.ico">
     <meta name="theme-color" content="#8B5CF6">
 </head>
 <body>
