Add Edge Function for dynamic product page metadata generation
- Created `produto.js` Edge Function to handle product ID from URL.
- Fetch product data from `data.json` and generate dynamic meta tags.
- Update HTML response with product-specific title, description, images, and price.
- Implement caching for improved performance.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://chefinhogamestore.netlify.app/">
     <meta property="og:title" content="Chefinho Gaming Store - A Maior Loja e-commerce de produtos digitais do Brasil">
     <meta property="og:description" content="Encontre os melhores equipamentos /contas com preços exclusivos. Rucoy Online, Free Fire, Clash Royale e muito mais!">
-    <meta property="og:image" content="https://chefinhogamestore.netlify.app/img/rucoyonline.png">
+    <meta property="og:image" content="https://chefinhogamestore.netlify.app/img/chefinho.png">
     <meta property="og:site_name" content="Chefinho Gaming Store">
     <meta property="og:locale" content="pt_BR">
     <meta property="twitter:card" content="summary_large_image">
