feat: add image modal functionality for product images with lightbox effect

--- a/produto.html
+++ b/produto.html
@@ -626,5 +626,20 @@
             }
         }
     </style>
+
+    <!-- Modal de Imagem -->
+    <div id="imageModal" class="image-modal">
+        <div class="image-modal-content">
+            <button class="image-modal-close" onclick="closeImageModal()">
+                <i class="fas fa-times"></i>
+            </button>
+            <img id="modalImage" class="image-modal-image" src="" alt="">
+            <div class="image-modal-info">
+                <div id="modalTitle" class="image-modal-title"></div>
+                <div id="modalDescription" class="image-modal-description"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
