feat: add HTML pages for WhatsApp advertisement testing and button functionality
- Created teste-anuncio.html for testing WhatsApp message generation with different plans.
- Implemented message preview and copy functionality.
- Added emoji support for enhanced message formatting.
- Created teste-botoes.html for testing button interactions with inline and event listener methods.
- Implemented logging functionality to display console messages on the page.

--- a/contato.html
+++ b/contato.html
@@ -280,6 +280,7 @@
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="rucoy.html">Rucoy KKs</a></li>
+                    <li><a href="anunciar.html">Anunciar</a></li>
                     <li><a href="contato.html" class="active">Contato</a></li>
                 </ul>
                 
