--- a/produtos.html
+++ b/produtos.html
@@ -51,6 +51,7 @@
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html" class="active">Produtos</a></li>
                     <li><a href="rucoy.html">Rucoy KKs</a></li>
+                    <li><a href="anunciar.html">Anunciar</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
                 
