--- a/admin-dev.html
+++ b/admin-dev.html
@@ -258,6 +258,23 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="image_url">
+                            <i class="fas fa-image"></i>
+                            URL da Imagem
+                        </label>
+                        <input type="text" id="image_url" name="image_url" placeholder="https://...jpg">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="video_url">
+                            <i class="fas fa-video"></i>
+                            URL do Vídeo
+                        </label>
+                        <input type="text" id="video_url" name="video_url" placeholder="https://...mp4">
+                    </div>
+
+
+                    <div class="form-group">
                         <label for="category">
                             <i class="fas fa-folder"></i>
                             Categoria *
@@ -443,8 +460,8 @@
                     id: Date.now().toString(),
                     name: formData.get("name"),
                     category: formData.get("category"),
-                    image_url: "",
-                    video_url: "",
+                    image_url: formData.get("image_url") || "",
+                    video_url: formData.get("video_url") || "",
                     description:
                         formData.get("description") ||
                         `Produto adicionado via painel em ${new Date().toLocaleString()}`,
