--- a/admin-secure.html
+++ b/admin-secure.html
@@ -428,9 +428,11 @@
                                 placeholder="100.00">
                         </div>
                         <div class="form-group">
-                            <label for="image_url"><i class="fas fa-image"></i> URL da Imagem</label>
-                            <input type="url" id="image_url" name="image_url"
-                                placeholder="https://exemplo.com/imagem.jpg">
+                            <label for="image_file">
+                                <i class="fas fa-image"></i>
+                                Imagem (arquivo)
+                            </label>
+                            <input type="file" id="image_file" name="image_file" accept="image/*">
                         </div>
                         <div class="form-group">
                             <label for="video_url"><i class="fas fa-video"></i> URL do Vídeo</label>
