feat: add product advertisement feature with plans and active status
- Introduced new fields in the products table for managing advertisements, including is_anuncio, anuncio_plano, anuncio_inicio, anuncio_fim, anunciante_nome, and anunciante_whatsapp.
- Implemented functions to check active advertisements and deactivate expired ones.
- Updated the site data retrieval function to include advertisement details in the product listings.
- Enhanced the product rendering logic to display advertisement badges and styles based on the selected plan (basic, pro, elite).
- Added UI elements in the admin panel for managing active advertisements and displaying statistics.
- Updated various HTML files to remove references to Rucoy KKs.

--- a/anunciar.html
+++ b/anunciar.html
@@ -220,7 +220,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="rucoy.html">Rucoy KKs</a></li>
+                    <!-- <li><a href="rucoy.html">Rucoy KKs</a></li> -->
                     <li><a href="anunciar.html" class="active">Anunciar</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -265,7 +265,7 @@
                 </div>
                 <div class="stats">
                     <div class="stat-item fade-in-up">
-                        <span class="stat-number">10K+</span>
+                        <span class="stat-number">200+</span>
                         <span class="stat-label">Visualizações/mês</span>
                     </div>
                     <div class="stat-item fade-in-up">
