--- a/carrinho.html
+++ b/carrinho.html
@@ -279,7 +279,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="rucoy.html">Rucoy KKs</a></li>
+                    <!-- <li><a href="rucoy.html">Rucoy KKs</a></li> -->
                     <li><a href="anunciar.html">Anunciar</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -324,10 +324,10 @@
                     <i class="fas fa-gamepad"></i>
                     <span>Produtos</span>
                 </a>
-                <a href="rucoy.html" class="mobile-nav-item">
+                <!-- <a href="rucoy.html" class="mobile-nav-item">
                     <i class="fas fa-coins"></i>
-                    <span>Rucoy KKs</span>
-                </a>
+                        <span>Rucoy KKs</span>
+                    </a> -->
                 <a href="contato.html" class="mobile-nav-item">
                     <i class="fas fa-envelope"></i>
                     <span>Contato</span>
