--- a/rucoy.html
+++ b/rucoy.html
@@ -297,7 +297,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="rucoy.html" class="active">Rucoy KKs</a></li>
+                    <!-- <li><a href="rucoy.html" class="active">Rucoy KKs</a></li> -->
                     <li><a href="anunciar.html">Anunciar</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -342,10 +342,10 @@
                     <i class="fas fa-gamepad"></i>
                     <span>Produtos</span>
                 </a>
-                <a href="rucoy.html" class="mobile-nav-item active">
+                <!-- <a href="rucoy.html" class="mobile-nav-item active">
                     <i class="fas fa-coins"></i>
                     <span>Rucoy KKs</span>
-                </a>
+                </a> -->
                 <a href="contato.html" class="mobile-nav-item">
                     <i class="fas fa-envelope"></i>
                     <span>Contato</span>
@@ -362,10 +362,10 @@
                     <i class="fab fa-whatsapp"></i>
                     <span>WhatsApp</span>
                 </a>
-                <a href="rucoy.html" class="mobile-action-btn primary-btn">
+                <!-- <a href="rucoy.html" class="mobile-action-btn primary-btn">
                     <i class="fas fa-coins"></i>
                     <span>Rucoy KKs</span>
-                </a>
+                </a> -->
             </div>
             
             <div class="mobile-contact-info">
@@ -397,7 +397,7 @@
                 <nav class="breadcrumb">
                     <a href="index.html">Início</a>
                     <span>/</span>
-                    <span>Rucoy KKs</span>
+                    <!-- <span>Rucoy KKs</span> -->
                 </nav>
             </div>
         </div>
@@ -556,7 +556,7 @@
                     <h3>Links Rápidos</h3>
                     <p><a href="index.html">Início</a></p>
                     <p><a href="produtos.html">Produtos</a></p>
-                    <p><a href="rucoy.html">Rucoy KKs</a></p>
+                    <!-- <p><a href="rucoy.html">Rucoy KKs</a></p> -->
                     <p><a href="produtos.html?category=freefire">Free Fire</a></p>
                     <p><a href="produtos.html?category=mage">Rucoy Mage</a></p>
                     <p><a href="produtos.html?category=kina">Rucoy Knight</a></p>
