--- a/produto.html
+++ b/produto.html
@@ -58,7 +58,7 @@
                 <ul class="nav-links">
                     <li><a href="/index.html">Início</a></li>
                     <li><a href="/produtos.html">Produtos</a></li>
-                    <li><a href="/rucoy.html">Rucoy KKs</a></li>
+                    <!-- <li><a href="/rucoy.html">Rucoy KKs</a></li> -->
                     <li><a href="/contato.html">Contato</a></li>
                 </ul>
                 
