--- a/produtos.html
+++ b/produtos.html
@@ -50,7 +50,7 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Início</a></li>
                     <li><a href="produtos.html" class="active">Produtos</a></li>
-                    <li><a href="rucoy.html">Rucoy KKs</a></li>
+                    <!-- <li><a href="rucoy.html">Rucoy KKs</a></li> -->
                     <li><a href="anunciar.html">Anunciar</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
@@ -92,10 +92,10 @@
                             <i class="fas fa-shopping-bag"></i>
                             <span>Produtos</span>
                         </a>
-                        <a href="rucoy.html" class="mobile-nav-item">
+                        <!-- <a href="rucoy.html" class="mobile-nav-item">
                             <i class="fas fa-coins"></i>
                             <span>Rucoy KKs</span>
-                        </a>
+                        </a> -->
                         <a href="contato.html" class="mobile-nav-item">
                             <i class="fas fa-phone"></i>
                             <span>Contato</span>
@@ -113,10 +113,10 @@
                             <i class="fab fa-whatsapp"></i>
                             <span>WhatsApp</span>
                         </a>
-                        <a href="rucoy.html" class="mobile-action-btn primary-btn">
+                        <!-- <a href="rucoy.html" class="mobile-action-btn primary-btn">
                             <i class="fas fa-coins"></i>
                             <span>Rucoy KKs</span>
-                        </a>
+                        </a> -->
                     </div>
                     
                     <!-- Contact Info -->
