--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
                             <i class="fas fa-shield-alt"></i>
                         </div>
                         <div>
-                            <h3 class="marketplace-title">Marketplace Seguro de Contas</h3>
-                            <p class="marketplace-subtitle">Compramos e vendemos contas verificadas de todos os jogos
+                            <h3 class="marketplace-title">Marketplace Seguro de Contas e Itens</h3>
+                            <p class="marketplace-subtitle">Compramos e vendemos contas e itens verificadas de todos os jogos
                             </p>
                         </div>
                     </div>
@@ -249,7 +249,7 @@
 
                 <div class="marketplace-form-container">
                     <div class="marketplace-form" id="marketplaceForm">
-                        <h4>Tenho uma conta para negociar</h4>
+                        <h4>Tenho uma conta ou item para negociar</h4>
                         <form id="accountForm">
                             <div class="form-group">
                                 <input type="text" id="sellerName" placeholder="Seu nome" required>
