feat: update customer count display from '100+' to '1k+'

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                         <span class="stat-label">Produtos</span>
                     </div>
                     <div class="stat-item fade-in-up">
-                        <span class="stat-number">100+</span>
+                        <span class="stat-number">1k+</span>
                         <span class="stat-label">Clientes</span>
                     </div>
                     <div class="stat-item fade-in-up">
