feat: add Vercel Analytics integration to multiple HTML files

--- a/carrinho.html
+++ b/carrinho.html
@@ -1002,5 +1002,12 @@
             });
         });
     </script>
+
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
