--- a/contato.html
+++ b/contato.html
@@ -1090,5 +1090,12 @@
             }
         });
     </script>
+
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
