--- a/produto.html
+++ b/produto.html
@@ -216,5 +216,11 @@
         </div>
     </div>
 
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
