--- a/produtos.html
+++ b/produtos.html
@@ -1204,5 +1204,11 @@
         </div>
     </div>
 
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
