--- a/anunciar.html
+++ b/anunciar.html
@@ -435,5 +435,12 @@ Aguardo retorno para enviar os detalhes do meu anúncio! 🚀`;
             document.querySelector('.nav-links').classList.toggle('active');
         });
     </script>
+
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
