--- a/index.html
+++ b/index.html
@@ -1066,6 +1066,12 @@
         });
     </script>
 
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 
 </html>
