--- a/rucoy.html
+++ b/rucoy.html
@@ -633,5 +633,12 @@
             });
         });
     </script>
+
+    <!-- Vercel Analytics -->
+    <script type="module">
+        import { inject } from '/@vercel/analytics';
+        inject();
+    </script>
+
 </body>
 </html>
