Update rucoy.html and supabase/02_insert_data.sql for content and configuration changes
- Improved HTML structure and formatting in rucoy.html for better readability.
- Updated meta descriptions and Open Graph properties for enhanced SEO.
- Changed store hours in supabase/02_insert_data.sql to reflect new operating times.

--- a/anunciar.html
+++ b/anunciar.html
@@ -366,11 +366,8 @@
                 <div class="footer-section">
                     <h3>Atendimento</h3>
                     <p><i class="fab fa-whatsapp"></i> +55 69 9345-0986</p>
-                    <p><i class="fas fa-envelope"></i> contato@chefinho.com</p>
                     <p><strong>Horários:</strong></p>
-                    <p>Segunda à Sexta: 8h às 18h</p>
-                    <p>Sábado: 8h às 14h</p>
-                    <p>Domingo: Fechado</p>
+                    <p>Todos os dias: 9h às 23h</p>
                 </div>
                 
                 <div class="footer-section">
@@ -390,7 +387,7 @@
                     <p>3. Finalize no WhatsApp</p>
                     <p>4. Receba seus dados</p>
                     <br>
-                    <p><strong>Pagamento:</strong> PIX, Cartão, Boleto</p>
+                    <p><strong>Pagamento:</strong> Somente via PIX</p>
                     <p><strong>Entrega:</strong> Imediata via WhatsApp</p>
                 </div>
             </div>
