--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-clock"></i>
-                            <span>Segunda à Sexta: 8h às 18h</span>
+                            <span>Todos os dias: 9h às 23h</span>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,8 @@
                         </div>
                         <div>
                             <h3 class="marketplace-title">Marketplace Seguro de Contas e Itens</h3>
-                            <p class="marketplace-subtitle">Compramos e vendemos contas e itens verificadas de todos os jogos
+                            <p class="marketplace-subtitle">Compramos e vendemos contas e itens verificadas de todos os
+                                jogos
                             </p>
                         </div>
                     </div>
@@ -366,11 +367,8 @@
                 <div class="footer-section">
                     <h3>Atendimento</h3>
                     <p><i class="fab fa-whatsapp"></i> +55 69 9345-0986</p>
-                    <p><i class="fas fa-envelope"></i> contato@chefinho.com</p>
                     <p><strong>Horários:</strong></p>
-                    <p>Segunda à Sexta: 8h às 18h</p>
-                    <p>Sábado: 8h às 14h</p>
-                    <p>Domingo: Fechado</p>
+                    <p>Todos os dias: 9h às 23h</p>
                 </div>
 
                 <div class="footer-section">
@@ -390,7 +388,7 @@
                     <p>3. Finalize no WhatsApp</p>
                     <p>4. Receba seus dados</p>
                     <br>
-                    <p><strong>Pagamento:</strong> PIX, Cartão, Boleto</p>
+                    <p><strong>Pagamento:</strong> Somente via PIX</p>
                     <p><strong>Entrega:</strong> Imediata via WhatsApp</p>
                 </div>
             </div>
